登陆去版权所有

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
     <display-name>Blog</display-name>
+    <welcome-file-list>
+        <welcome-file>a.jsp</welcome-file>
+    </welcome-file-list>
 
 
     <!-- spring监听器 -->
