--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,7 +1,8 @@
 redis_maxTotal=30
 redis_maxIdle=15
 redis_minIdle=5
-redis_host=ali.xzhi.club
+redis_host=xzhi.club
 redis_port=6379
 redis_timeout=3000
 redis_database=0
+redis_password=13755540327zzq
